@@ -15,6 +15,7 @@ NetcuePort=/dev/ttyS0
 LivewireIpAddress=192.168.21.21
 AdapterIpAddress=192.168.21.13
 RelayDebounceInterval=500
+LwrpPassword=
 InputBusXfers=No
 OutputBusXfers=Yes
 
